--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "vue": "^2.2.6",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.4.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "vue-loader": "^11.3.4",
     "webpack": "^2.3.3"
   },
   "scripts": {
