--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "vue-router": "^2.4.0"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-template": "^6.24.1",
     "gulp": "^3.9.1",
+    "html-webpack-plugin": "^2.28.0",
     "vue-loader": "^11.3.4",
-    "webpack": "^2.3.3"
+    "vue-template-compiler": "^2.2.6",
+    "webpack": "^2.4.1"
   },
   "scripts": {
+    "dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
