--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A mutiple pages project \u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[C\u001b[\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[\u001b[C\u001bvue\u001b[B\u001b[B\u001b[B\u001b[B\u001b[B\u001b[B\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C of multiple pages",
   "main": "index.js",
   "dependencies": {
+    "mint-ui": "^2.2.3",
     "vue": "^2.2.6",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.4.0"
@@ -16,12 +17,14 @@
     "babel-template": "^6.24.1",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.28.0",
+    "rimraf": "^2.6.1",
     "vue-loader": "^11.3.4",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.4.1"
   },
   "scripts": {
     "dev": "webpack-dev-server",
+    "build": "rimraf dist && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
