--- a/package.json
+++ b/package.json
@@ -3,25 +3,6 @@
   "version": "1.0.0",
   "description": "A mutiple pages project \u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[C\u001b[\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[\u001b[C\u001bvue\u001b[B\u001b[B\u001b[B\u001b[B\u001b[B\u001b[B\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C of multiple pages",
   "main": "index.js",
-  "dependencies": {
-    "mint-ui": "^2.2.3",
-    "vue": "^2.2.6",
-    "vue-resource": "^1.3.1",
-    "vue-router": "^2.4.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-template": "^6.24.1",
-    "gulp": "^3.9.1",
-    "html-webpack-plugin": "^2.28.0",
-    "rimraf": "^2.6.1",
-    "vue-loader": "^11.3.4",
-    "vue-template-compiler": "^2.2.6",
-    "webpack": "^2.4.1"
-  },
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "rimraf dist && webpack",
@@ -45,5 +26,30 @@
   "bugs": {
     "url": "https://github.com/dirkliu/multiple-vue-page/issues"
   },
-  "homepage": "https://github.com/dirkliu/multiple-vue-page#readme"
+  "homepage": "https://github.com/dirkliu/multiple-vue-page#readme",
+  "dependencies": {
+    "mint-ui": "^2.2.3",
+    "vue": "^2.2.6",
+    "vue-resource": "^1.3.1",
+    "vue-router": "^2.4.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-template": "^6.24.1",
+    "css-loader": "^0.28.0",
+    "gulp": "^3.9.1",
+    "html-webpack-plugin": "^2.28.0",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.16.1",
+    "vue-loader": "^11.3.4",
+    "vue-template-compiler": "^2.2.6",
+    "webpack": "^2.4.1"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
+  }
 }
