--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "mint-ui": "^2.2.3",
     "vue": "^2.2.6",
+    "vue-json-editor": "^1.0.1",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.4.0"
   },
@@ -40,10 +41,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-template": "^6.24.1",
     "css-loader": "^0.28.0",
+    "file-loader": "^0.11.1",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.28.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
     "vue-loader": "^11.3.4",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.4.1"
