--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multiple-vue-page",
   "version": "1.0.0",
-  "description": "A mutiple pages project \u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[C\u001b[\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[\u001b[C\u001bvue\u001b[B\u001b[B\u001b[B\u001b[B\u001b[B\u001b[B\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C of multiple pages",
+  "description": "A mutiple pages project of vue.js",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
