--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "babel-preset-env": "^1.4.0",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
+    "px2rem-loader": "^0.1.7",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^11.3.4",
-    "html-webpack-plugin": "^2.28.0",
-    "rimraf": "^2.6.1",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.4.1"
   },
