--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.4.0",
     "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "px2rem-loader": "^0.1.7",
