--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "jquery": "^3.2.1",
     "mint-ui": "^2.2.3",
-    "vue": "^2.2.6",
+    "vue": "2.2.6",
     "vue-json-editor": "^1.0.1",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.4.0"
@@ -47,8 +47,8 @@
     "rimraf": "^2.6.1",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
-    "vue-loader": "^11.3.4",
-    "vue-template-compiler": "^2.2.6",
+    "vue-loader": "^12.2.0",
+    "vue-template-compiler": "2.2.6",
     "webpack": "^2.4.1",
     "webpack-merge": "^4.1.0"
   },
