--- a/config/config.json
+++ b/config/config.json
@@ -7,6 +7,12 @@
   {
     "filename": "./activity.html",
     "template":"./src/activity.html",
-    "chunks": ["activity"]
+    "chunks": ["activity"],
+    "hash": true,
+    "minify": {
+        "removeComments": true,
+        "collapseWhitespace": true,
+        "removeAttributeQuotes": true
+      }
   }
 ]
