--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "optimize-css-assets-webpack-plugin": "^1.3.2",
     "px2rem-loader": "^0.1.7",
     "rimraf": "^2.6.1",
     "style-loader": "^0.16.1",
