--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A mutiple pages project of vue.js",
   "main": "index.js",
+  "bin": {
+    "build": "./bin/build"
+  },
   "scripts": {
     "dev": "webpack-dev-server --config config/webpack.dev.js",
     "build": "rimraf dist && webpack --config config/webpack.prod.js",
@@ -46,6 +49,7 @@
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "px2rem-loader": "^0.1.7",
     "rimraf": "^2.6.1",
+    "shelljs": "^0.7.7",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.2.0",
