--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "px2rem-loader": "^0.1.7",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
+    "scss-loader": "^0.0.1",
     "shelljs": "^0.7.7",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
