--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "css-loader": "^0.28.0",
+    "eslint": "^5.9.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
